# predict-cac-phenotyping

./: .gitignore  LICENSE  README.md  params.yaml  pyproject.toml  requirements.txt
configs/: default.yaml  perturbations.yaml  pyradiomics.yaml
src/predict/: __init__.py  config.py
tests/: conftest.py
tests/io/: test_config.py
