[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "predict"
version = "0.1.0"
description = "PrediCT v2 — coronary calcium radiomics phenotyping pipeline"
requires-python = ">=3.8"
readme = "README.md"
dependencies = [
    "numpy>=1.24",
    "pandas>=1.5",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "SimpleITK>=2.2",
    "pydicom>=2.4",
    "opencv-python>=4.8",
    "pyradiomics>=3.0",
    "PyYAML>=6.0",
    "tqdm>=4.65",
    "neuroCombat>=0.2.12",   # stage 5 D019: kernel harmonisation
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring data",
]

[tool.ruff]
line-length = 100
target-version = "py38"
